@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jeroenreijn</groupId>
 	<artifactId>spring-comparing-template-engines</artifactId>
@@ -40,14 +38,14 @@
 		<rythm.version>1.3.0</rythm.version>
 		<rythm-spring.version>1.2.2</rythm-spring.version>
 		<liqp.version>0.7.9</liqp.version>
-		<kotlin.version>1.3.61</kotlin.version>
-		<kotlinx.html.version>0.7.1</kotlinx.html.version>
+		<kotlin.version>1.5.0</kotlin.version>
+		<kotlinx.html.version>0.7.2</kotlinx.html.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
+		<version>2.4.5</version>
 		<relativePath />
 	</parent>
 
@@ -166,20 +164,20 @@
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity-engine-core</artifactId>
-			<version>2.0</version>
+			<version>2.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.velocity.tools</groupId>
 			<artifactId>velocity-tools-view</artifactId>
-			<version>3.0</version>
+			<version>3.1</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.alibaba.boot</groupId>
 			<artifactId>velocity-spring-boot-starter</artifactId>
 			<version>1.0.4.RELEASE</version>
-		</dependency>
+		</dependency> -->
 
 
 		<dependency>
@@ -297,6 +295,7 @@
 		<finalName>template-engines</finalName>
 
 		<plugins>
+			
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
@@ -342,6 +341,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						--illegal-access=permit
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</jvmArguments>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -403,8 +408,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute>
-										</execute>
+										<execute></execute>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
